--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "uuid": "8.3.0"
   },
   "publishConfig": {
     "access": "public"
