--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "json2csv": "^5.0.3",
     "lodash": "^4.17.20",
     "uuid": "8.3.0"
   },
