--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@researchdatabox/sails-hook-redbox-storage-mongo",
-  "version": "1.1.5-alpha",
+  "version": "1.1.6-alpha",
   "description": "A MongoDB storage plugin for ReDBox.",
   "main": "index.js",
   "sails": {
@@ -26,7 +26,7 @@
   "author": "QCIF Engineering dev@redboxresearchdata.com.au",
   "license": "GPL-3.0",
   "devDependencies": {
-    "@researchdatabox/redbox-core-types": "^1.0.3-beta",
+    "@researchdatabox/redbox-core-types": "^1.0.9",
     "@types/chai": "^4.2.12",
     "@types/lodash": "^4.14.159",
     "@types/mocha": "^8.0.3",
