--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@researchdatabox/sails-hook-redbox-storage-mongo",
-  "version": "1.1.7-alpha",
+  "version": "1.2.0",
   "description": "A MongoDB storage plugin for ReDBox.",
   "main": "index.js",
   "sails": {
