--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build_and_publish:
     docker:
-      - image: circleci/node:18.7.0
+      - image: cimg/node:18.7.0
     working_directory: ~/repo
     steps:
       - checkout
