--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,8 @@ jobs:
     machine:
       image: ubuntu-2004:current
     resource_class: medium
+    environment:
+      BUILDKIT_PROGRESS: 'plain'
     steps:
       - checkout
       - restore_cache:
@@ -19,6 +21,11 @@ jobs:
           key: v1-node-{{ .Branch }}-{{ checksum "package-lock.json" }}
           paths:
             - ~/.npm
+      - run:
+          # TODO: chmod 777 isn't great, but the permission errors were getting too complicated
+          name: Change project dir ownership to work in docker container
+          command: |
+            sudo chmod -R 'u=rwx,g=rwx,o=rwx' /home/circleci/project
       - run:
           name: Run tests
           command: |
