--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "@researchdatabox/redbox-core-types": "1.4.8",
     "@types/chai": "5.2.2",
     "@types/lodash": "4.17.17",
-    "@types/node": "20.17.51",
     "@types/mocha": "10.0.10",
+    "@types/node": "20.17.51",
     "chai": "5.2.0",
     "fs": "0.0.1-security",
     "mocha": "11.5.0",
-    "mocha-junit-reporter": "2.2.1",
-    "moment": "2.30.1",
+  "mocha-junit-reporter": "2.2.1",
+  "luxon": "^3.7.1",
     "mongodb": "6.16.0",
     "rxjs": "6.6.7",
     "rxjs-compat": "6.6.7",
@@ -55,6 +55,9 @@
     "json2csv": "^5.0.3",
     "lodash": "^4.17.21",
     "uuid": "8.3.0"
+  },
+  "peerDependencies": {
+    "luxon": ">=3.0.0"
   },
   "publishConfig": {
     "access": "public"
