--- a/package.json
+++ b/package.json
@@ -33,19 +33,17 @@
   "author": "QCIF Engineering dev@redboxresearchdata.com.au",
   "license": "GPL-3.0",
   "devDependencies": {
-    "@researchdatabox/redbox-core-types": "1.4.8",
+    "@researchdatabox/redbox-core-types": "^1.5.0",
     "@types/chai": "5.2.2",
     "@types/lodash": "4.17.17",
     "@types/mocha": "10.0.10",
     "@types/node": "20.17.51",
     "chai": "5.2.0",
     "fs": "0.0.1-security",
+    "luxon": "^3.7.1",
     "mocha": "11.5.0",
-  "mocha-junit-reporter": "2.2.1",
-  "luxon": "^3.7.1",
+    "mocha-junit-reporter": "2.2.1",
     "mongodb": "6.16.0",
-    "rxjs": "6.6.7",
-    "rxjs-compat": "6.6.7",
     "sails": "1.5.14",
     "stream": "0.0.3",
     "typescript": "5.5.4",
@@ -57,7 +55,8 @@
     "uuid": "8.3.0"
   },
   "peerDependencies": {
-    "luxon": ">=3.0.0"
+    "luxon": ">=3.0.0",
+    "rxjs": ">=7.0.0"
   },
   "publishConfig": {
     "access": "public"
